--- a/style.css
+++ b/style.css
@@ -1,267 +1,262 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "League Spartan", sans-serif;
 }
 
-body {
-  background-color:#000;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+button {
+  all: unset;
+  cursor: pointer;
 }
 
-/* Circles */
-.circle1 {
-  position: absolute;
-  width: 13em;
-  height: 13em;
-  border-radius: 50%;
-  background: linear-gradient(-25deg,  #d84869, #f46641);
-  top: 5%;
-  left: 30%;
-  box-shadow: 0 0 50px #d84869;
-  animation: circle1Animate 5s infinite;
+:root {
+  --dk-violet: hsl(268, 75%, 9%);
+  --lt-violet: hsl(268, 47%, 21%);
+  --lt-violet2: hsl(281, 89%, 26%);
+  --vb-violet: hsl(285, 91%, 52%);
+  --vb-violet2: hsl(290, 70%, 36%);
+
+  --vb-yellow: hsl(52, 100%, 62%);
+
+  --pl-white: hsl(0, 0%, 100%);
+
+  --vb-cyan: hsl(176, 100%, 44%);
+  --vb-cyan2: hsl(177, 92%, 70%);
+
+  --dk-text: hsl(198, 20%, 13%);
 }
 
-@keyframes circle1Animate {
-  50% {
-    left: 33%;
-    top: 4%;
-    scale: 1.11;
-  }
-}
-
-.circle2 {
-  position: absolute;
-  bottom: 5%;
-  right: 30%;
-  width: 13em;
-  height: 13em;
-  border-radius: 50%;
-  box-shadow: 0 0 50px #5648d8;
-  background: linear-gradient(-25deg,  #5648d8, #8641f4);
-  animation: circle2Animate 5s infinite; 
-}
-
-@keyframes circle2Animate {
-  50% {
-    bottom: 6%;
-    right: 31%;
-  }
-}
-
-.wrapper {
-  width: 100vw;
+#wrapper {
   height: 100vh;
+  width: 100vw;
+  background: linear-gradient(
+    231deg,
+    rgba(22, 6, 40, 1) 0%,
+    rgba(52, 28, 79, 1) 50%,
+    rgba(88, 7, 125, 1) 100%
+  );
+  /* display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; */
+
+  display: grid;
+  place-items: center;
+  overflow: hidden auto;
+}
+
+/* Design Main Container */
+.container {
+  width: 90%;
+  max-width: 450px;
+}
+
+.heading {
+  line-height: 1.2;
+  color: var(--pl-white);
+  opacity: 0.75;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+/* Display Container */
+.displayContainer {
+  position: relative;
+  background-color: var(--dk-violet);
+  border-radius: 1rem;
+  border-bottom: 0.35rem solid var(--lt-violet2);
+  padding-top: 0.35rem;
+  margin: 1rem 0;
+}
+
+.displayContainer input {
+  width: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding: 1.15rem 1rem;
+  color: var(--vb-yellow);
+  font-weight: 600;
+  font-size: 1.5rem;
+  line-height: 30px;
+  letter-spacing: 1px;
+  padding-right: 3.25rem;
+}
+
+.displayContainer input::placeholder {
+  color: var(--vb-yellow);
+  text-transform: uppercase;
+  opacity: 0.65;
+  font-size: 1.5rem;
+  line-height: 30px;
+  position: absolute;
+  top: 50%;
+  left: 1.5rem;
+  transform: translateY(-50%);
+}
+
+.copyBtn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 1.5rem;
+}
+
+/* Display Container End */
+
+/* Input Container Start  */
+.inputContainer {
+  background-color: var(--dk-violet);
+  border-radius: 1rem;
+  border-bottom: 0.35rem solid var(--lt-violet2);
+  padding: 2rem;
+  width: 100%;
+  /* color: var(--pl-white); */
+}
+
+/* Length Container Start  */
+.lengthContainer {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  overflow-x: hidden;
-  overflow-y: auto;
+}
+
+.lengthContainer p:nth-child(1) {
+  color: var(--pl-white);
+  font-size: 1.5rem;
+}
+
+.lengthContainer p:nth-child(2) {
+  color: var(--vb-yellow);
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+/* Length Container End  */
+
+/* Slider Start  */
+.slider {
+  appearance: none;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+  border: none;
+  outline: none;
+  border-radius: 1rem;
+  height: 0.75rem;
+  background: var(--lt-violet);
+  background-image: linear-gradient(var(--vb-violet), var(--vb-violet));
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.slider:focus {
+  outline: 3px solid var(--vb-yellow);
+}
+
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background: var(--vb-yellow);
+  box-shadow: 0px 0px 20px 0px rgba(255, 229, 61, 0.5);
+  transition: all 100ms ease-in;
+  cursor: pointer;
+  margin-top: -3px;
+  z-index: 2;
   position: relative;
 }
 
-.container {
-  height: 250px;
-  width: 170px;
-  background: #ffffff1a;
+.slider::-webkit-slider-thumb:hover {
+  outline: 2px solid var(--vb-yellow);
+  background-color: var(--dk-violet);
+  box-shadow: 0px 0px 25px 5px rgba(255, 229, 61, 0.8);
+}
+
+/* Checkboxes Start */
+.check {
+  margin: 1rem 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  padding: 20px 50px;
-  border-radius: 15px;
-  color: #ffffff;
-  border: 2px solid #ffffff30;
-  backdrop-filter: blur(15px);
+  gap: 0 1rem;
 }
 
-.container div:nth-child(1) {
-  border: 2px solid #ffffff30;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  box-sizing: border-box;
-}
-
-.container div:nth-child(1) img {
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-}
-
-.userName h2 {
-  font-size: 2rem;
-  text-align: center;
-}
-
-.designation h3 {
-  text-align: center;
-  color: #ffffff85;
-}
-
-.btnGroup {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.btn {
-  border: 2px solid #ffffffb9;
-  background: #ffffff00;
-  color: #ffffffb9;
-  cursor: pointer;
-  border-radius: 4px;
+.check label {
   text-transform: capitalize;
-  padding: 9px 12px;
-  transition: all 0.5s;
+  color: var(--pl-white);
+  font-size: 1.25rem;
+  letter-spacing: 0.75px;
 }
 
-.btnShare {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 7px;
-}
-
-.btnFollow {
-  width: 150px;
-}
-
-.btnFollow a{
-  text-decoration: none;
-  color: #ffffffb9;
-}
-
-.btnFollow:hover a{
-  color: #131313;
-}
-.btn:hover {
-  background: #ffffffb9;
-  color: #131313;
-}
-
-/* Modal  */
-.modal {
-  color: white;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-  border: 2px solid #ffffff59;
-  width: 500px;
-  scale: 0;
-  background: #00000088;
-  padding: 20px 25px;
-  border-radius: 20px;
-   transition: 0.5s ease-in-out; 
-  backdrop-filter: blur(10px);
-  z-index: 1;
-}
-
-.modalHeader{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 25px;
-  padding-bottom: 12px;
-  border-bottom: 1px solid #ffffff88;
-}
-
-.modalHeader div i{
-  font-size: 30px;
+.check input {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--vb-cyan);
   cursor: pointer;
+  position: relative;
+  border-radius: 0.35rem;
 }
 
-.iconContainer {
-  margin-top: 20px;
+.check input:checked {
+  background-color: var(--vb-cyan);
+}
+
+.check input:checked::before {
+  position: absolute;
+  content: "✔";
+  color: var(--dk-text);
+  font-size: 1.05rem;
+  font-weight: 600;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -3.5px;
+}
+
+/* Checkboxes End */
+
+/* Strength Container Start  */
+
+.strengthContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  margin-top: 1.75rem;
+  margin-bottom: 2rem;
 }
 
-.icon{  
-  padding: 17px;
+.strengthContainer p {
+  color: var(--pl-white);
+  font-size: 1.5rem;
+}
+
+.indicator {
+  width: 1.5em;
+  height: 1.5rem;
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px 0px;
-  gap: 10px;
-  justify-content: center;
-  transition: all 0.5s;
-  margin-bottom: 25px;
-  text-decoration: none;
 }
 
-.icon i {
-  font-size: 27px;
+/* Strength Container End  */
+
+/* Generate Button  */
+#generateBtn {
+  background: var(--vb-violet);
+  width: 100%;
+  padding: 1rem 0;
+  border-radius: 0.75rem;
+  border-bottom: 0.35rem solid var(--vb-yellow);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: var(--vb-yellow);
+  font-weight: 600;
+  font-size: 1.25rem;
+  text-align: center;
 }
 
-#facebook {
-  color: #1771e6;
-  border: 1px solid #1771e6;
-}
-#facebook:hover {
-  background-color: #1771e6;
-  color: #fff;
-}
-
-#twitter {
-  color: #1c99e6;
-  border: 1px solid #1c99e6;
-}
-#twitter:hover {
-  background-color: #1c99e6;
-  color: #fff;
-}
-
-#instagram {
-  color: #cb2770;
-  border: 1px solid #cb2770;
-}
-#instagram:hover {
-  background-color: #cb2770;
-  color: #fff;
-}
-
-#whatsapp {
-  color: #2fe664;
-  border: 1px solid #2fe664;
-}
-#whatsapp:hover {
-  background-color: #2fe664;
-  color: #fff;
-}
-
-#telegram {
-  color: #0081c2;
-  border: 1px solid #0081c2;
-}
-#telegram:hover {
-  background-color: #0081c2;
-  color: #fff;
-}
-
-.active {
-  scale: 1;
-}
-
-.overlay {
-  position: fixed;
-  background-color: #5f5f5f83;
-  top: 0;
-  opacity: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  pointer-events: none;
-  transition: 0.5s ease-in-out;
-}
-.overlayActive {
-  opacity: 1;
-  pointer-events: initial;
-}
+/* Generate Button Ends 
+ */
